[1135] [Detachment] Viewpoint Detachment with Sirius Layer. Reactivate kitalpha menu
Bug: 1135

Change-Id: Ie711beb1736746dbffe3eb30b97255a5aa323f1e
Signed-off-by: Faycal Abka <faycal.abka@altran.com>