@@ -351,7 +351,7 @@ This file was generated by Eclipse EGF
         </echoproperties>
     </target>
 	
-	<target name="all" depends="CleanStep_1,TP,TP_build,common,PublishStep_5,common_feature,BuildStep_7,PublishStep_8,accuracy_feature,resourcereuse,PublishStep_11,PublishStep_12,PublishStep_13,PublishStep_14,resourcereuse_feature,cadence,PublishStep_17,cadence_feature,report,PublishStep_20,PublishStep_21,report_feature,emde,PublishStep_24,PublishStep_25,PublishStep_26,emde_feature,contextual_explorer,PublishStep_29,contextual_explorer_emde_feature,patterns,PublishStep_32,patterns_feature,diagrams,PublishStep_35,diagrams_representation_feature,docgen,PublishStep_38,PublishStep_39,docgen_features,BuildStep_41,PublishStep_42,composer_feature,BuildStep_44,PublishStep_45,transposer_feature,detachment,PublishStep_48,PublishStep_49,PublishStep_50,PublishStep_51,PublishStep_52,common_1_feature,detachment_feature,attachment_feature,ad,PublishStep_57,PublishStep_58,ad_feature,detachment_contrib,PublishStep_61,contrib_feature,ad_dsl,PublishStep_64,PublishStep_65,addsl_feature,examples,PublishStep_68,PublishStep_69,PublishStep_70,BuildStep_71,PublishStep_72,EgfStep_73,BuildStep_74,PublishStep_75,BuildStep_76,EgfStep_77,BuildStep_78,PublishStep_79,BuildStep_80,EgfStep_81,BuildStep_82,PublishStep_83,BuildStep_84,PublishStep_85,PublishStep_86,PublishStep_87,kitalpha_runtime,kitalpha_sdk,TP_win32-win32-x86,TP_win32-win32-x86_64,TP_linux-gtk-x86,TP_linux-gtk-x86_64,TP_macosx-cocoa-x86_64,AntStep_95" />
+	<target name="all" depends="CleanStep_1,TP,TP_build,common,PublishStep_5,common_feature,BuildStep_7,PublishStep_8,accuracy_feature,resourcereuse,PublishStep_11,PublishStep_12,PublishStep_13,PublishStep_14,resourcereuse_feature,cadence,PublishStep_17,cadence_feature,report,PublishStep_20,PublishStep_21,report_feature,emde,PublishStep_24,PublishStep_25,PublishStep_26,emde_feature,contextual_explorer,PublishStep_29,contextual_explorer_emde_feature,patterns,PublishStep_32,patterns_feature,diagrams,PublishStep_35,diagrams_representation_feature,docgen,PublishStep_38,PublishStep_39,docgen_features,BuildStep_41,PublishStep_42,composer_feature,BuildStep_44,PublishStep_45,transposer_feature,detachment,PublishStep_48,PublishStep_49,PublishStep_50,PublishStep_51,PublishStep_52,PublishStep_53,common_1_feature,detachment_and_attachment_menu_feature,detachment_feature,attachment_feature,ad,PublishStep_59,PublishStep_60,ad_feature,detachment_contrib,PublishStep_63,contrib_feature,ad_dsl,PublishStep_66,PublishStep_67,addsl_feature,examples,PublishStep_70,PublishStep_71,PublishStep_72,BuildStep_73,PublishStep_74,EgfStep_75,BuildStep_76,PublishStep_77,BuildStep_78,EgfStep_79,BuildStep_80,PublishStep_81,BuildStep_82,EgfStep_83,BuildStep_84,PublishStep_85,BuildStep_86,PublishStep_87,PublishStep_88,PublishStep_89,kitalpha_runtime,kitalpha_sdk,TP_win32-win32-x86,TP_win32-win32-x86_64,TP_linux-gtk-x86,TP_linux-gtk-x86_64,TP_macosx-cocoa-x86_64,AntStep_97" />
 	<target name="TP" depends="TP_setup_kitalpha_runtime_platform" />
 	<target name="TP_setup_kitalpha_runtime_platform" depends="TP_setup_kitalpha_runtime_platform_setup_platform,TP_setup_kitalpha_runtime_platform_install_ecoretools2_for_contextual_explorer" />
 	<target name="TP_setup_kitalpha_runtime_platform_setup_platform" depends="TP_setup_kitalpha_runtime_platform_setup_platform_TP,TP_setup_kitalpha_runtime_platform_setup_platform_install_cots_features,TP_setup_kitalpha_runtime_platform_setup_platform_install_sirius_features,TP_setup_kitalpha_runtime_platform_setup_platform_install_diffmerge,TP_setup_kitalpha_runtime_platform_setup_platform_install_amalgam_features,TP_setup_kitalpha_runtime_platform_setup_platform_install_ecoretools2" />
@@ -1041,7 +1041,7 @@ This file was generated by Eclipse EGF
 		</buckminster>
     </target>
 
-    <target name="BuildStep_71" depends="init,install.buckminster">
+    <target name="BuildStep_73" depends="init,install.buckminster">
         <echo message="Importing projects into workspace ${workspace} and binaries into target platform" />
 
 		<echo message="install JRE ${env.JAVA_HOME}" />
@@ -1057,51 +1057,14 @@ This file was generated by Eclipse EGF
         <buckminster command="importtargetdefinition">
             <cmdargs>
                 <arg value="--active" />
-                <arg value="${relengDir}/buckminster_BuildStep_71/build.target" />
+                <arg value="${relengDir}/buckminster_BuildStep_73/build.target" />
             </cmdargs>
         </buckminster>
 		<echo message="provision : import projects in workspace" />
         <buckminster command="import">
             <!-- Uncomment to debug <globargs><jvmarg value="-agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=y"/></globargs> -->
             <cmdargs>
-                <arg value="${relengDir}/buckminster_BuildStep_71/build.mspec" />
-            </cmdargs>
-        </buckminster>
-
-
-        <echo message="Invoking all eclipse builders on workspace ${workspace}" />
-        <buckminster command="build" >
-            <cmdargs>
-                <arg value="--clean" />
-                <arg value="--thorough" />
-            </cmdargs>
-		</buckminster>
-    </target>
-
-    <target name="BuildStep_74" depends="init,install.buckminster">
-        <echo message="Importing projects into workspace ${workspace} and binaries into target platform" />
-
-		<echo message="install JRE ${env.JAVA_HOME}" />
-    	<buckminster command="installJRE">
-            <cmdargs>
-                <arg value="--location" />
-                <arg value="${env.JAVA_HOME}" />
-            </cmdargs>
-        </buckminster>
-
-
-		<echo message="import target platform" />
-        <buckminster command="importtargetdefinition">
-            <cmdargs>
-                <arg value="--active" />
-                <arg value="${relengDir}/buckminster_BuildStep_74/build.target" />
-            </cmdargs>
-        </buckminster>
-		<echo message="provision : import projects in workspace" />
-        <buckminster command="import">
-            <!-- Uncomment to debug <globargs><jvmarg value="-agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=y"/></globargs> -->
-            <cmdargs>
-                <arg value="${relengDir}/buckminster_BuildStep_74/build.mspec" />
+                <arg value="${relengDir}/buckminster_BuildStep_73/build.mspec" />
             </cmdargs>
         </buckminster>
 
@@ -1287,6 +1250,43 @@ This file was generated by Eclipse EGF
             <!-- Uncomment to debug <globargs><jvmarg value="-agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=y"/></globargs> -->
             <cmdargs>
                 <arg value="${relengDir}/buckminster_BuildStep_84/build.mspec" />
+            </cmdargs>
+        </buckminster>
+
+
+        <echo message="Invoking all eclipse builders on workspace ${workspace}" />
+        <buckminster command="build" >
+            <cmdargs>
+                <arg value="--clean" />
+                <arg value="--thorough" />
+            </cmdargs>
+		</buckminster>
+    </target>
+
+    <target name="BuildStep_86" depends="init,install.buckminster">
+        <echo message="Importing projects into workspace ${workspace} and binaries into target platform" />
+
+		<echo message="install JRE ${env.JAVA_HOME}" />
+    	<buckminster command="installJRE">
+            <cmdargs>
+                <arg value="--location" />
+                <arg value="${env.JAVA_HOME}" />
+            </cmdargs>
+        </buckminster>
+
+
+		<echo message="import target platform" />
+        <buckminster command="importtargetdefinition">
+            <cmdargs>
+                <arg value="--active" />
+                <arg value="${relengDir}/buckminster_BuildStep_86/build.target" />
+            </cmdargs>
+        </buckminster>
+		<echo message="provision : import projects in workspace" />
+        <buckminster command="import">
+            <!-- Uncomment to debug <globargs><jvmarg value="-agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=y"/></globargs> -->
+            <cmdargs>
+                <arg value="${relengDir}/buckminster_BuildStep_86/build.mspec" />
             </cmdargs>
         </buckminster>
 
@@ -1975,6 +1975,35 @@ This file was generated by Eclipse EGF
 			<globargs>
 				<arg value="-Dsite.include.top=true"/>
 				<arg value="-Dsite.signing=false"/>				
+				<arg value="-Dcbi.include.source=false"/>				
+			</globargs>
+			<cmdargs>
+				<arg value="org.polarsys.kitalpha.model.common.ui.menu.feature:eclipse.feature#site.p2" />
+			</cmdargs>
+		</buckminster>
+
+		<echo message="Publish site"/>
+		<mkdir dir="${publish}/org.polarsys.kitalpha.model.common.ui.menu.feature/site.p2/"/>
+		<copy todir="${publish}/org.polarsys.kitalpha.model.common.ui.menu.feature/site.p2/">
+			<fileset dir="${result}/output">
+				<include name="org.polarsys.kitalpha.model.common.ui.menu.feature*/site.p2/*"/>
+				<include name="org.polarsys.kitalpha.model.common.ui.menu.feature*/site.p2/**"/>
+			</fileset>
+			<filtermapper>
+				<replaceregex pattern=".*site\.p2" replace="" />
+			</filtermapper>
+		</copy>
+		
+	</target>
+
+	<target name="PublishStep_52" depends="init,install.buckminster" >
+
+		
+		<echo message="Generate Site"/>
+		<buckminster command="perform">
+			<globargs>
+				<arg value="-Dsite.include.top=true"/>
+				<arg value="-Dsite.signing=false"/>				
 				<arg value="-Dcbi.include.source=true"/>				
 			</globargs>
 			<cmdargs>
@@ -1996,7 +2025,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_52" depends="init,install.buckminster" >
+	<target name="PublishStep_53" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -2025,7 +2054,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_57" depends="init,install.buckminster" >
+	<target name="PublishStep_59" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -2054,7 +2083,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_58" depends="init,install.buckminster" >
+	<target name="PublishStep_60" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -2083,7 +2112,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_61" depends="init,install.buckminster" >
+	<target name="PublishStep_63" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -2112,7 +2141,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_64" depends="init,install.buckminster" >
+	<target name="PublishStep_66" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -2141,7 +2170,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_65" depends="init,install.buckminster" >
+	<target name="PublishStep_67" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -2170,7 +2199,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_68" depends="init,install.buckminster" >
+	<target name="PublishStep_70" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -2199,7 +2228,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_69" depends="init,install.buckminster" >
+	<target name="PublishStep_71" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -2228,7 +2257,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_70" depends="init,install.buckminster" >
+	<target name="PublishStep_72" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -2257,7 +2286,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_72" depends="init,install.buckminster" >
+	<target name="PublishStep_74" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -2286,7 +2315,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_75" depends="init,install.buckminster" >
+	<target name="PublishStep_77" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -2315,7 +2344,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_79" depends="init,install.buckminster" >
+	<target name="PublishStep_81" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -2344,7 +2373,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_83" depends="init,install.buckminster" >
+	<target name="PublishStep_85" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -2373,7 +2402,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_85" depends="init,install.buckminster" >
+	<target name="PublishStep_87" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -2402,7 +2431,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_86" depends="init,install.buckminster" >
+	<target name="PublishStep_88" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -2431,7 +2460,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_87" depends="init,install.buckminster" >
+	<target name="PublishStep_89" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -2499,7 +2528,7 @@ This file was generated by Eclipse EGF
 
 
 
-	<target name="AntStep_95">
+	<target name="AntStep_97">
 		<antcall target="cleanUp"/>
 	</target>
 
@@ -2549,7 +2578,7 @@ This file was generated by Eclipse EGF
 </target>
 
 
-	<target name="EgfStep_73" depends="init,install.egf">
+	<target name="EgfStep_75" depends="init,install.egf">
 		<egf>
             <globargs>
 				<jvmarg value="-Degf.target.bundle.priority=true" />
@@ -2562,7 +2591,7 @@ This file was generated by Eclipse EGF
 			</activities>
 		</egf>
 	</target>
-	<target name="EgfStep_77" depends="init,install.egf">
+	<target name="EgfStep_79" depends="init,install.egf">
 		<egf>
             <globargs>
 				<jvmarg value="-Degf.target.bundle.priority=true" />
@@ -2575,7 +2604,7 @@ This file was generated by Eclipse EGF
 			</activities>
 		</egf>
 	</target>
-	<target name="EgfStep_81" depends="init,install.egf">
+	<target name="EgfStep_83" depends="init,install.egf">
 		<egf>
             <globargs>
 				<jvmarg value="-Degf.target.bundle.priority=true" />
@@ -3637,6 +3666,36 @@ This file was generated by Eclipse EGF
                 <arg value="org.polarsys.kitalpha.model.common.share.feature.feature.group" />
                 <arg value="-i" />
                 <arg value="org.polarsys.kitalpha.model.common.share.source.feature.feature.group" />
+
+            </args>
+        </eclipse.launch>
+	</target>	
+	<target name="detachment_and_attachment_menu_feature" depends="init,install.director" >
+        <eclipse.launch app="director">
+            <args>
+                <jvmarg value="-Declipse.p2.mirrors=false" />
+                    <jvmarg value="-Xmx1024m"/>
+                    <jvmarg value="-XX:MaxPermSize=256m"/>
+
+
+            	<arg value="-roaming" />
+            	<arg value="-profileProperties" />
+                <arg value="org.eclipse.update.install.features=true " />
+
+                <arg value="-d" />
+                <arg value="${publish}/TP" />
+                
+                <arg value="-p" />
+                <arg value="SDKProfile" />
+
+
+                <arg value="-r" />
+                <arg value="file:/${publish}/org.polarsys.kitalpha.model.common.ui.menu.feature/site.p2" />
+                
+
+
+                <arg value="-i" />
+                <arg value="org.polarsys.kitalpha.model.common.ui.menu.feature.feature.group" />
 
             </args>
         </eclipse.launch>
